--- a/docs/source/about_dataset_features.mdx
+++ b/docs/source/about_dataset_features.mdx
@@ -1,8 +1,8 @@
 # Dataset features
 
-[`datasets.Features`] defines the internal structure of a dataset. It is used to specify the underlying serialization format. What's more interesting to you though is that [`datasets.Features`] contains high-level information about everything from the column names and types, to the [`datasets.ClassLabel`]. You can think of [`datasets.Features`] as the backbone of a dataset.
+[`Features`] defines the internal structure of a dataset. It is used to specify the underlying serialization format. What's more interesting to you though is that [`Features`] contains high-level information about everything from the column names and types, to the [`ClassLabel`]. You can think of [`Features`] as the backbone of a dataset.
 
-The [`datasets.Features`] format is simple: `dict[column_name, column_type]`. It is a dictionary of column name and column type pairs. The column type provides a wide range of options for describing the type of data you have.
+The [`Features`] format is simple: `dict[column_name, column_type]`. It is a dictionary of column name and column type pairs. The column type provides a wide range of options for describing the type of data you have.
 
 Let's have a look at the features of the MRPC dataset from the GLUE benchmark:
 
@@ -17,7 +17,7 @@ Let's have a look at the features of the MRPC dataset from the GLUE benchmark:
 }
 ```
 
-The [`datasets.Value`] feature tells 🤗 Datasets:
+The [`Value`] feature tells 🤗 Datasets:
 
 - The `idx` data type is `int32`.
 - The `sentence1` and `sentence2` data types are `string`.
@@ -26,13 +26,13 @@ The [`datasets.Value`] feature tells 🤗 Datasets:
 
 <Tip>
 
-Refer to [`datasets.Value`] for a full list of supported data types.
+Refer to [`Value`] for a full list of supported data types.
 
 </Tip>
 
-The [`datasets.ClassLabel`] feature informs 🤗 Datasets the `label` column contains two classes. The classes are labeled `not_equivalent` and `equivalent`. Labels are stored as integers in the dataset. When you retrieve the labels, [`datasets.ClassLabel.int2str`] and [`datasets.ClassLabel.str2int`] carries out the conversion from integer value to label name, and vice versa.
+The [`ClassLabel`] feature informs 🤗 Datasets the `label` column contains two classes. The classes are labeled `not_equivalent` and `equivalent`. Labels are stored as integers in the dataset. When you retrieve the labels, [`ClassLabel.int2str`] and [`ClassLabel.str2int`] carries out the conversion from integer value to label name, and vice versa.
 
-If your data type contains a list of objects, then you want to use the [`datasets.Sequence`] feature. Remember the SQuAD dataset?
+If your data type contains a list of objects, then you want to use the [`Sequence`] feature. Remember the SQuAD dataset?
 
 ```py
 >>> from datasets import load_dataset
@@ -45,7 +45,7 @@ If your data type contains a list of objects, then you want to use the [`dataset
 'title': Value(dtype='string', id=None)}
 ```
 
-The `answers` field is constructed using the [`datasets.Sequence`] feature because it contains two subfields, `text` and `answer_start`, which are lists of `string` and `int32`, respectively.
+The `answers` field is constructed using the [`Sequence`] feature because it contains two subfields, `text` and `answer_start`, which are lists of `string` and `int32`, respectively.
 
 <Tip>
 
@@ -53,7 +53,7 @@ See the [flatten](./process#flatten) section to learn how you can extract the ne
 
 </Tip>
 
-The array feature type is useful for creating arrays of various sizes. You can create arrays with two dimensions using [`datasets.Array2D`], and even arrays with five dimensions using [`datasets.Array5D`]. 
+The array feature type is useful for creating arrays of various sizes. You can create arrays with two dimensions using [`Array2D`], and even arrays with five dimensions using [`Array5D`]. 
 
 ```py
 >>> features = Features({'a': Array2D(shape=(1, 3), dtype='int32'))
