--- a/docs/source/cache.mdx
+++ b/docs/source/cache.mdx
@@ -33,18 +33,18 @@ Similarly, you can change where a metric is cached with the `cache_dir` paramete
 
 ## Download mode
 
-After you download a dataset, control how it is loaded by [`datasets.load_dataset`] with the `download_mode` parameter. By default, 🤗 Datasets will reuse a dataset if it exists. But if you need the original dataset without any processing functions applied, re-download the files as shown below:
+After you download a dataset, control how it is loaded by [`load_dataset`] with the `download_mode` parameter. By default, 🤗 Datasets will reuse a dataset if it exists. But if you need the original dataset without any processing functions applied, re-download the files as shown below:
 
 ```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset('squad', download_mode='force_redownload')
 ```
 
-Refer to [`datasets.DownloadMode`] for a full list of download modes.
+Refer to [`DownloadMode`] for a full list of download modes.
 
 ## Cache files
 
-Clean up the cache files in the directory with [`datasets.Dataset.cleanup_cache_files`]:
+Clean up the cache files in the directory with [`Dataset.cleanup_cache_files`]:
 
 ```py
 # Returns the number of removed cache files
@@ -54,7 +54,7 @@ Clean up the cache files in the directory with [`datasets.Dataset.cleanup_cache_
 
 ## Enable or disable caching
 
-If you're using a cached file locally, it will automatically reload the dataset with any previous transforms you applied to the dataset. Disable this behavior by setting the argument `load_from_cache=False` in [`datasets.Dataset.map`]:
+If you're using a cached file locally, it will automatically reload the dataset with any previous transforms you applied to the dataset. Disable this behavior by setting the argument `load_from_cache=False` in [`Dataset.map`]:
 
 ```py
 >>> updated_dataset = small_dataset.map(add_prefix, load_from_cache=False)
@@ -62,7 +62,7 @@ If you're using a cached file locally, it will automatically reload the dataset 
 
 In the example above, 🤗 Datasets will execute the function `add_prefix` over the entire dataset again instead of loading the dataset from its previous state.
 
-Disable caching on a global scale with [`datasets.disable_caching`]:
+Disable caching on a global scale with [`disable_caching`]:
 
 ```py
 >>> from datasets import disable_caching
@@ -73,7 +73,7 @@ When you disable caching, 🤗 Datasets will no longer reload cached files when 
 
 <Tip>
 
-If you want to reuse a dataset from scratch, try setting the `download_mode` parameter in [`datasets.load_dataset`] instead.
+If you want to reuse a dataset from scratch, try setting the `download_mode` parameter in [`load_dataset`] instead.
 
 </Tip>
 
