Remove module name from tip

--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -83,7 +83,7 @@ Load remote datasets from their URLs with the `data_files` parameter:
 
 <Tip>
 
-If the image files come from a trusted source, pass `ignore_verifications=True` to [`datasets.load_dataset`] to skip checksum verification and speed up loading.
+If the image files come from a trusted source, pass `ignore_verifications=True` to [`load_dataset`] to skip checksum verification and speed up loading.
 
 </Tip>
 
