--- a/docs/source/filesystems.mdx
+++ b/docs/source/filesystems.mdx
@@ -99,7 +99,7 @@ Save your dataset with `botocore.session.Session` and a custom AWS profile:
 
 ## Loading datasets
 
-When you are ready to use your dataset again, reload it with `datasets.load_from_disk`:
+When you are ready to use your dataset again, reload it with [`Dataset.load_from_disk`]:
 
 ```py
 >>> from datasets import load_from_disk
