--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -167,7 +167,7 @@ Now visualize the results of the `ColorJitter` transform:
 ![image_process_jitter](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/image_process_jitter.png)
 
 <Tip>
-PyTorch's data augmentations use PIL under the hood, installing [Pillow](https://pillow.readthedocs.io/en/latest/installation.html) will increase performance by 2/3x in most systems/
+PyTorch's data augmentations use PIL under the hood, installing [Pillow](https://pillow.readthedocs.io/en/latest/installation.html) will increase performance by 2/3x in most systems.
 </Tip>
  
  
