Skip S3FileSystem in docs

--- a/docs/source/package_reference/main_classes.mdx
+++ b/docs/source/package_reference/main_classes.mdx
@@ -226,7 +226,7 @@ The base class `Metric` implements a Metric backed by one or several [`Dataset`]
 ## Filesystems
 
 
-[[autodoc]] datasets.filesystems.S3FileSystem
+<!-- [[autodoc]] datasets.filesystems.S3FileSystem -->
 
 [[autodoc]] datasets.filesystems.extract_path_from_uri
 
