🖍 use the shorthand syntax

--- a/docs/source/access.mdx
+++ b/docs/source/access.mdx
@@ -11,7 +11,7 @@ A [`Dataset`] object is returned when you load an instance of a dataset. This ob
 
 ## Metadata
 
-The [`Dataset`] object contains a lot of useful information about your dataset. For example, call [`~datasets.Dataset.info`] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
+The [`Dataset`] object contains a lot of useful information about your dataset. For example, access [`DatasetInfo`] to return a short description of the dataset, the authors, and even the dataset size. This will give you a quick snapshot of the datasets most important attributes.
 
 ```py
 >>> dataset.info
