--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -558,7 +558,7 @@ Set a dataset to a TensorFlow compatible format with [`Dataset.set_format`]. Spe
 >>> dataset.set_format(type='tensorflow', columns=['input_ids', 'token_type_ids', 'attention_mask', 'label'])
 ```
 
-Then you can wrap the dataset with [`~datasets.Dataset.to_tf_dataset`]. This method gives you more control over how to create a [TensorFlow Dataset](https://www.tensorflow.org/api_docs/python/tf/data/Dataset). In the example below, the dataset is created `from_tensor_slices`:
+Then you can wrap the dataset with `tf.data.Dataset`. This method gives you more control over how to create a [TensorFlow Dataset](https://www.tensorflow.org/api_docs/python/tf/data/Dataset). In the example below, the dataset is created `from_tensor_slices`:
 
 ```py
 >>> tfdataset = tf.data.Dataset.from_tensor_slices((features, dataset["label"])).batch(32)
